# pybrook

./: .copier-answers.yml  .dockerignore  .flake8  .gitignore  404.html  Dockerfile  Makefile  README.md  calc_latency.py  docker-compose.yml  index.html  locustfile.py  mkdocs.yml  objects.inv  package.json  pyproject.toml
css/: mkdocstrings.css
docs/: index.md
docs/css/: mkdocstrings.css
docs/reference/: __init__.md  __main__.md  config.md  encoding.md  models.md  schemas.md
docs/reference/consumers/: base.md  dependency_resolver.md  field_generator.md  splitter.md  worker.md
pybrook/: __init__.py  __main__.py  config.py  encoding.py  models.py  schemas.py  utils.py
pybrook-frontend/: package.json  rollup.config.js
pybrook-frontend/src/: App.svelte  LeafletMap.svelte  LineList.svelte  Marker.svelte  ReportTimeElapsed.svelte  VehicleDetailModal.svelte  VehicleList.svelte  VehicleMarker.svelte  VehiclesMap.svelte  main.js  reportStore.js  stores.js
pybrook/consumers/: __init__.py  base.py  dependency_resolver.py  field_generator.py  splitter.py  worker.py
pybrook/examples/: buses.py  demo.py  ztm.py
pybrook/frontend/: index.html
pybrook/workers/: __init__.py  splitter.py
reference/: __main__.html  config.html  encoding.html  models.html  schemas.html
reference/consumers/: base.html  dependency_resolver.html  field_generator.html  splitter.html  worker.html
search/: search_index.json
tests/: conftest.py  test_models.py  test_pybrook.py  test_streams.py
