[tool.poetry]
name = "pybrook"
version = "0.1.0"
description = ""
authors = ["Michał Rokita <mrokita@mrokita.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
# docs
mkdocstrings = "^0.15.2"
pytkdocs = "^0.11.1"
mkdocs = "^1.1.2"
mkdocs-material = "^7.1.0"
mkdocs-git-revision-date-plugin = "^0.3.1"
mkdocs-git-revision-date-localized-plugin = "^0.9.2"
mike = "^1.0.1"
livereload = "^2.6.3"

# formatting
yapf = "^0.31.0"
isort = "^5.5.1"

# linting
darglint = "^1.5.8"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.4.3"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.3.1"
flake8-pytest-style = "^1.3.0"
flake8-string-format = "^0.3.0"
flake8-tidy-imports = "^4.2.1"
flake8-variables-names = "^0.0.4"
pep8-naming = "^0.11.1"
wps-light = "^0.15.2"
mypy = "^0.812"

# tests
pytest = "^6.2"
pytest-cov = "^2.11.1"
pytest-sugar = "^0.9.4"

# misc
ptpython = "^3.0.7"

[tool.isort]
line_length = 90
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = "THIRDPARTY"
known_first_party = "pybrook"
include_trailing_comma = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[mypy]
ignore_missing_imports = true
