[tool.poetry]
name = "pybrook"
version = "0.1.3"
description = ""
authors = ["Michał Rokita <mrokita@mrokita.pl>"]
readme = "README.md"
license = "GPL-3.0-or-later"

[tool.poetry.scripts]
pybrook = "pybrook.__main__:main"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.87.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pytest = "^6.2.5"
redis = {extras = ["asyncio"], version = "^4.5.1"}
loguru = "^0.5.3"
Pillow = "^8.4.0"
pandoc-crossref = "^0.1.1"
gunicorn = "^20.1.0"
httpx = "^0.21.1"
watchdog = "^2.1.6"
uvloop = "^0.17.0"
orjson = "^3.6.5"
locust = "^2.6.1"
pydantic = "^1.10.6"


[tool.poetry.group.dev.dependencies]
# docs
mkdocstrings = {extras = ["python"], version = "^0.20.0"}
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.3"
mike = "^1.0.1"
livereload = "^2.6.3"

# formatting
yapf = "^0.31.0"
isort = "^5.5.1"

# linting
darglint = "^1.5.8"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.4.3"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.3.1"
flake8-pytest-style = "^1.3.0"
flake8-string-format = "^0.3.0"
flake8-tidy-imports = "^4.2.1"
flake8-variables-names = "^0.0.4"
pep8-naming = "^0.12.1"
mypy = "^0.910"

# tests
pytest = "^6.2"
pytest-cov = "^3.0.0"
pytest-sugar = "^0.9.4"

# misc
ptpython = "^3.0.7"
pytest-asyncio = "^0.15.1"
types-redis = "^3.5.15"
locust = "^2.5.0"

wps-light = "^0.16.1"

[tool.isort]
line_length = 90
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = "THIRDPARTY"
known_first_party = "pybrook"
include_trailing_comma = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.mypy]
files = ["pybrook"]
ignore_missing_imports = true
plugins = "pydantic.mypy"
